--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "fc1d5501-bc8b-425c-8b85-c673262a47ed"
   },
   "newProjectRoot": "projects",
   "projects": {
