--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
+    "htmlWhitespaceSensitivity": "ignore",
     "overrides": [
       {
         "files": "*.html",
